--- a/header.html
+++ b/header.html
@@ -13,10 +13,10 @@
     
     <nav>
         <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/pt.html">Products & Technologies</a></li>
-            <li><a href="/monitor.html">Water Monitoring</a></li>
-            <li><a href="/form.html">Community Engagement</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pt.html">Products & Technologies</a></li>
+            <li><a href="monitor.html">Water Monitoring</a></li>
+            <li><a href="form.html">Community Engagement</a></li>
             <!-- <li><a href="#visualization">Data Visualization</a></li>
             <li><a href="#partnerships">Partnerships & Collaborations</a></li> -->
         </ul>
