--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                     <p>Check Water Flow (Gallons/Minute) Water Pressure (PSI) of different states here. </p>
                 </div>
                 <div class="content-image">
-                    <img src="/img/mon.png" alt="Image 4" style="max-width: 50%;">
+                    <img src="mon.png" alt="Image 4" style="max-width: 50%;">
                 </div>
             </div>
         </section>
