--- a/monitor.html
+++ b/monitor.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Water Monitoring and Reporting</title>
+    <link rel="icon" href="logo.png" type="image/icon type">
     <link rel="stylesheet" href="mon.css">
 </head>
 <body>
