--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="home.css">
     <title>Water Wastage Block</title>
+    <link rel="icon" href="logo.png" type="image/icon type">
 </head>
 <body>
     <script src="head.js"></script>
