--- a/footer.html
+++ b/footer.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <footer>
-        <p>&copy; 2023 Water Wastage Block</p>
+        <p>Water Wastage Block</p>
     </footer>
 </body>
 </html>
